[package]
name = "trove"
version = "0.1.0"
authors = ["Joshua Benuck <joshua_benuck@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "trove"
path = "src/lib.rs"

[dependencies]
dirs = "*"
url = "*"
reqwest = "*"
serde = "*"
serde_json = "*"
sha2 = "*"
log = "*"
clap = "*"
failure = "*"
hex = "*"
select = "*"